link to documentation

--- a/README
+++ b/README
@@ -1,1 +1,5 @@
+Documentation: https://gmaiaf.github.io/EnergyMonitor/index
+
+
+Warnings
 Change {CMSIS_LOC} variable to your CMSIS installation folder
